# solana-copilot

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  pyproject.toml  vercel.json
dashboard/: .env.local.example  .gitignore  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
db/: schema.sql  supabase_schema.sql
docs/: RESEARCH_PLAN.md  TEAM_INTENT.md  TRACK_RECORD.md
eval/: AUDIT_BASELINE.md  BASELINE.md  MODEL_BASELINE.md  NEGATIVE_RESULTS.md  __init__.py  _common.py  ablation.py  audit.py  backtest.py  drift.py  economic_backtest.py  model.py  topology.py
public/: track_record.json
scripts/: backfill_coordination.py  backfill_funder_reputation.py  backfill_funding_source.py  backfill_live_trades.py  backfill_member_gate.py  backfill_outcomes.py  backfill_post_grad_swaps.py  backfill_supabase_gap.py  backfill_token_names.py  export_training_dataset.py  nightly_audit.py  rebuild_funder_lineage.py  rebuild_wallet_graph.py  reset_learning_tables.py  seed_smart_money.py  setup_macmini.sh  sweep_platform.py  track_record.py  train_early_model.py  train_model.py  weekly_retrain.py
tests/: test_audit_bands.py  test_bc_reconstruct.py  test_coordination.py  test_distribution.py  test_early_attention.py  test_exit_choreography.py  test_gmgn.py  test_graduation_monitor.py  test_helius.py  test_holder_snapshot.py  test_learning_wiring.py  test_live_trades.py  test_microstructure.py  test_narrative_match.py  test_patterns.py  test_phase3.py  test_pipeline_v2.py  test_post_grad_swaps.py  test_pump_listener.py  (+15 more)
(+81 files in other folders)
