[project]
name = "solana-copilot"
version = "0.1.0"
description = "Solana memecoin trading co-pilot — Pump.fun & Bags launchpad analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "ollama>=0.4.7",
    "anthropic>=0.40.0",
    "pandas>=2.2.3",
    "duckdb>=1.1.3",
    "click>=8.1.8",
    "aiohttp>=3.10.0",
    "supabase>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "scikit-learn>=1.5",   # eval/ harness only — live services never import it
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "scikit-learn>=1.5",   # eval/ harness only — live services never import it
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
